# gol-comp

./: Cargo.toml  README.md  TODO.md  glider.mc  justfile  test.mc
gui/: Cargo.toml
gui/src/: image.rs  main.rs  reduce.rs
node/: Cargo.toml
node/src/: block.rs  lib.rs  node.rs  pos.rs  quad.rs  rect.rs
node/src/ops/: bit.rs  center.rs  children.rs  clip.rs  get.rs  mc_format.rs  offset.rs  offset_norm.rs  population.rs  reduce.rs  rotate.rs  step.rs  test_format.rs
src/: basic.rs  board.rs  macrocell.rs  main.rs
