[package]
name = "gui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
lru = "0.10.0"
itertools = "0.10.5"
node = { path = "../node" }
bit-iter = "1.1.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter"] }
